# AutoNotes

./: .replit  advanced_quiz_system.py  app.py  app_backup.py  app_old.py  autograder.py  data_import_export.py  data_persistence.py  debug_session_state.py  e.sh  edit.sh  flashcard_generator.py  note_generator.py  pdf_report_generator.py  progress_tracker.py  pyproject.toml  quiz_generator.py  quizsystembackup.py  readme.md  replit.md  requirements.txt  user_data  user_data.py  utils.py  xp_system.py
userdata/: victo.json
