[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.3",
    "matplotlib>=3.10.5",
    "openai>=1.99.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "reportlab>=4.4.3",
    "streamlit>=1.48.0",
    "trafilatura>=2.0.0",
]
